# OpenContext

./: .gitignore  GDELT_SEARCH_GUIDE.md  README.md  api_client.py  app.py  docker-compose.secure.yml  docker-compose.yml  elasticsearch_client.py  env.example  gdelt_api.py  gdelt_mcp_client.py  gdelt_mcp_server.py  gdelt_multi_query_tool.py  gdeltdoc-api-test.py  gdeltdoc-trending.py  google_news_mcp_client.py  google_news_mcp_server.py  langchain_test.py  llm_service.py  main.py  models.py  news_service.py  prod_mcp_plan.md  prod_plan.md  pyproject.toml  semantic_cache.py  wiki_edit.py
